--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,14 +81,14 @@ a{
         max-width: 334px;
     }   
 }
-/*
+
 .ql-container{
     font-size: 28px !important;
 }
 
 .quill > .ql-container > .ql-editor.ql-blank::before{
     color: #b3b3b1;
-}*/
+}
 body::-webkit-scrollbar {
     display: none;
   }
